--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: black;
+  color: white;
+  width: 100%;
+  margin: auto;
+  padding: 30px 40px 30px 40px;
+  font-family: "Inter", sans-serif;
+}
+
+.navbar-info {
+  color: white;
+  display: flex;
+  width: 40%;
+  align-items: center;
+  justify-content: space-around;
+  font-family: "Inter", sans-serif;
+}
+
+.main-img {
+  background-color: pink;
+  width: 100%;
+  max-height: 95vh;
 }
