Added mission statement

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   margin: auto;
   padding: 30px 40px 30px 40px;
   font-family: "Inter", sans-serif;
+  letter-spacing: 2px;
 }
 
 .navbar-info {
