--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
@@ -29,7 +28,67 @@
 }
 
 .main-img {
-  background-color: pink;
   width: 100%;
-  max-height: 95vh;
+  height: 900px;
+}
+
+.mission-div {
+  margin-top: -5px;
+  padding-top: 50px;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  background-color: rgb(247, 248, 248);
+}
+
+.mission-div h1 {
+  font-size: 48px;
+  margin-bottom: 25px;
+}
+
+.subheading {
+  font-size: 22px;
+  font-weight: 300;
+}
+
+.missions {
+  margin-top: 70px;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.missions h2 {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+.mission img {
+  width: 550px;
+  height: 550px;
+}
+
+.missions h3 {
+  font-size: 22px;
+  font-weight: 300;
+  width: 550px;
+  margin: 10px 0 50px 0;
+}
+
+.container {
+  background-color: pink;
+  height: 100vh;
+  display: flex;
+}
+
+.selection {
+  background-color: aliceblue;
+  width: 20%;
+}
+
+.items {
+  background-color: aqua;
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
