Design and logic of catalogue page

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Inter", sans-serif;
 }
 
 .navbar {
@@ -16,6 +17,7 @@
   padding: 30px 40px 30px 40px;
   font-family: "Inter", sans-serif;
   letter-spacing: 2px;
+  cursor: pointer;
 }
 
 .navbar-info {
@@ -82,9 +84,18 @@
 
 .selection {
   width: 20%;
+  text-align: center;
+  margin-top: 100px;
+}
+
+.selection h2 {
+  margin: 16px;
+  font-size: 28px;
+  cursor: pointer;
 }
 
 .item-container {
+  margin-top: 50px;
   width: 80%;
 }
 
@@ -96,6 +107,12 @@
 .item {
   width: 300px;
   height: 450px;
+  cursor: pointer;
+}
+
+.item h2 {
+  font-weight: 300;
+  margin: 16px 0 8px 0;
 }
 
 .item img {
