--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   font-family: "Inter", sans-serif;
+  overflow-x: hidden;
 }
 
 .navbar {
@@ -29,22 +30,49 @@
   font-family: "Inter", sans-serif;
 }
 
+.nav-cart {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  color: black;
+  font-size: 28px;
+}
+
+.cart-container h2 {
+  padding: 3px 0 0 3px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  text-align: center;
+  background-color: #13aa52;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  position: absolute;
+  top: 2%;
+  right: 9.25%;
+}
+
 .main-img {
   width: 100%;
   height: 900px;
 }
 
 .mission-div {
-  margin-top: -5px;
   padding-top: 50px;
   text-align: center;
   font-family: "Inter", sans-serif;
-  background-color: rgb(247, 248, 248);
+  background-color: black;
+  color: white;
 }
 
 .mission-div h1 {
   font-size: 48px;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
 }
 
 .subheading {
@@ -53,7 +81,7 @@
 }
 
 .missions {
-  margin-top: 70px;
+  margin-top: 90px;
   display: flex;
   width: 100%;
   align-items: center;
@@ -78,7 +106,6 @@
 }
 
 .container {
-  height: 100vh;
   display: flex;
 }
 
@@ -96,6 +123,7 @@
 
 .item-container {
   margin-top: 50px;
+  height: auto;
   width: 80%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -103,8 +131,12 @@
 
 .item {
   width: 300px;
-  height: 450px;
+  height: 520px;
   cursor: pointer;
+}
+
+.snowboards {
+  margin-top: 65px;
 }
 
 .item h2 {
@@ -117,28 +149,35 @@
   max-height: 100%;
 }
 
-.focus-item {
-  width: 80vw;
-  margin: 15px 0 0 20px;
-  display: flex;
-  justify-content: space-evenly;
+.button-container {
+  margin: 15px 0;
+  text-align: left;
 }
 
-.focus-item h1 {
+.add-cart {
+  align-items: center;
+  background-color: #13aa52;
+  border: 2px solid #13aa52;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-size: 16px;
   font-weight: 300;
-  margin: 8px 0 8px 0;
-  font-size: 36px;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: -0.8px;
+  line-height: 24px;
+  outline: 0;
+  padding: 0 17px;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px 0;
+  text-decoration: none;
+  transform: translateY(0);
+  transition: transform 150ms, box-shadow 150ms;
 }
 
-.focus-item h2 {
-  font-size: 28px;
-}
-
-.right h2 {
-  font-size: 36px;
-  margin: 100px 0 25px 0;
-}
-
-.right li {
-  font-size: 18px;
+.right button:hover {
+  box-shadow: rgba(0, 0, 0, 0.15) 0 3px 9px 0;
+  transform: translateY(-2px);
 }
