--- a/src/index.css
+++ b/src/index.css
@@ -184,19 +184,44 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-around;
-  background-color: rgb(240, 236, 236);
+  background-color: rgb(255, 255, 255);
   position: absolute;
   top: 110px;
   right: 0;
   height: 90%;
-  width: 600px;
+  width: 400px;
   padding-left: 50px;
+  border-left: 2px solid #000000;
+  border-bottom: 2px solid #000000;
 }
 
 .display-cart-items {
-  background-color: pink;
   width: 500px;
   height: 500px;
+}
+
+.cart-item-container img {
+  width: 300px;
+  height: 300px;
+}
+
+.cart-item-container h2 {
+  font-weight: 300;
+  margin-bottom: 5px;
+}
+
+.cart-item-container h3 {
+  margin-bottom: 5px;
+}
+
+.item-quantity button {
+  font-size: 16px;
+  padding: 0px 12px;
+}
+
+.item-quantity span {
+  font-size: 16px;
+  margin: 0 5px;
 }
 
 .cart-buttons {
@@ -228,7 +253,7 @@
 }
 
 .cancel-btn {
-  background-color: #ffffff;
-  border: 2px solid #ffffff;
+  background-color: #b3afaf;
+  border: 2px solid #b3afaf;
   color: rgb(0, 0, 0);
 }
