--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,13 @@
 
 .container {
   display: flex;
+  z-index: 1;
+  transition: opacity 0.5s;
+}
+
+.shop-disable {
+  opacity: 0.5;
+  pointer-events: none;
 }
 
 .selection {
@@ -180,6 +187,7 @@
 }
 
 .cart-container {
+  transition: all 1s;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -187,12 +195,13 @@
   background-color: rgb(255, 255, 255);
   position: absolute;
   top: 110px;
-  right: 0;
+  right: 0px;
   height: 90%;
   width: 400px;
   padding-left: 50px;
   border-left: 2px solid #000000;
   border-bottom: 2px solid #000000;
+  z-index: 5;
 }
 
 .display-cart-items {
@@ -215,12 +224,19 @@
 }
 
 .item-quantity button {
+  cursor: pointer;
   font-size: 16px;
-  padding: 0px 12px;
+  padding: 4px 12px;
+  border: none;
+  background-color: #c9c8c8;
+}
+
+.item-quantity button:active {
+  transform: translateY(2px);
 }
 
 .item-quantity span {
-  font-size: 16px;
+  font-size: 18px;
   margin: 0 5px;
 }
 
@@ -234,7 +250,7 @@
   margin: 12px 0;
   align-items: center;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 300;
   height: 48px;
   justify-content: center;
@@ -244,6 +260,7 @@
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px 0;
   text-decoration: none;
+  border: none;
 }
 
 .checkout-btn {
@@ -253,7 +270,53 @@
 }
 
 .cancel-btn {
-  background-color: #b3afaf;
-  border: 2px solid #b3afaf;
-  color: rgb(0, 0, 0);
+  background-color: #8b8888;
+  border: 2px solid #8b8888;
+  color: #fff;
+}
+
+.btn {
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-text {
+  position: relative;
+  transition: 0.6s;
+}
+
+.checkout-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 130%;
+  height: 55px;
+  background-color: #13aa52;
+  transform: translate(-110%, 0) skew(-45deg);
+  transition: 0.6s;
+}
+
+.cancel-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 130%;
+  height: 55px;
+  background-color: #e21a1a;
+  transform: translate(-110%, 0) skew(-45deg);
+  transition: 0.6s;
+}
+
+.btn:hover .btn-text {
+  color: #fff;
+}
+
+.btn:hover::before {
+  transform: translate(-5%, 0) skew(-15deg);
+}
+
+.btn:active {
+  transform: translateY(2px);
 }
