--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,14 @@
   right: 9.25%;
 }
 
+.typewriter {
+  font-size: 72px;
+  position: absolute;
+  top: 50%;
+  left: 15%;
+  font-weight: 300;
+}
+
 .main-img {
   width: 100%;
   height: 900px;
